Fixed issue relating to absolute element and its z-index

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -247,6 +247,7 @@ nav div {
 .paper-profile {
     display: none;
     position: absolute;
+    z-index: 10;
     top: 55px;
     right: 0;
     height: 200px;
